# sota-actual

./: .env.example  .gitignore  FLARE.md  LICENSE  README.md  _firebase-check.mjs  dashboard.html  eslint.config.mjs  firestore.indexes.json  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  quickstart.html  start.sh  stop.sh  toolkit.html  tsconfig.json  tsconfig.tsbuildinfo
agents/: .env.example  Dockerfile  EVENT_FINDER_README.md  README.md  __init__.py  __main__.py  butler_agent_cli.py  butler_cli.py  create_neofs_container.py  demo_flare_predictor.py  docker-compose.yml  event_finder.py  flare_butler_api.py  job_finder.py  last_results.json  neofs_spoonos.py  neofs_storage.py  pyproject.toml  requirements.txt  simple_worker.py  spoonos_butler_api.py  start.bat  start.sh  start_butler.py  start_butler_api.sh  test_butler_chat.py  test_butler_init.py  test_flare_predictor.py  test_marketplace.py  test_neofs.py  test_public_container.py  test_real_ftso.py  test_twilio_call.py  test_user_strategy.py  verify_contracts.py
agents/src/: __init__.py
agents/src/butler/: __init__.py  agent.py  langgraph_butler.py  tools.py
agents/src/caller/: __init__.py  agent.py  server.py  tiktok_call_agent.py  tools.py
agents/src/cv_magic/: __init__.py  agent.py  server.py  tools.py
agents/src/flare_predictor/: __init__.py  agent.py  server.py  tools.py
agents/src/hackathon/: __init__.py  agent.py  registration_tools.py  server.py  tools.py
agents/src/manager/: __init__.py  agent.py  server.py  tools.py
agents/tests/: conftest.py  test_job_finder.py
(+369 files in other folders)
